Fix 'count' aggregate selector; change analysis report spacing

--- a/src/server/website-source/app/styles/analysis.scss
+++ b/src/server/website-source/app/styles/analysis.scss
@@ -93,14 +93,14 @@
     .parameter-label { font-weight: 600; }
 
     .analysis {
-        margin-top: 20px;
+        margin-top: 30px;
         h3 {
             border-bottom: 1px solid #cccccc;
             color: green;
             @include collapse-toggle(green, 20px);
         }
         .clusters .cluster-content {
-            margin: 10px auto;
+            margin: 30px auto;
             .cluster-header {
                 color: $secondary-color;
                 margin-bottom: 0px;
